--- a/APP_FILMS_164/templates/home.html
+++ b/APP_FILMS_164/templates/home.html
@@ -5,10 +5,10 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h3>
-				Démo complète du 2023.03.25
+				bien essayer
 			</h3>
 			<h3>
-				CRUD sur 3 tables autour des films et leurs genres associés<br>
+				CRUD sur 3 tables autour des utilisateur et leurs genres associés<br>
 			</h3>
 			<ul>
 				<li class="list-item">
