--- a/APP_FILMS_164/templates/genres/genres_ajouter_wtf.html
+++ b/APP_FILMS_164/templates/genres/genres_ajouter_wtf.html
@@ -12,9 +12,37 @@
 				{{ form.hidden_tag() }}
 				<div class="form-group">
 					<p>
-						{{ form.nom_utilisateur_wtf.label }}<br>
-						{{ form.nom_utilisateur_wtf(size=32) }}<br>
-						{% for error in form.nom_utilisateur_wtf.errors %}
+						{{ form.nom_genres_wtf.label }}<br>
+						{{ form.nom_genres_wtf(size=32) }}<br>
+						{% for error in form.nom_genres_wtf.errors %}
+							<span style="color: red;">[{{ error }}]</span>
+						{% endfor %}
+					</p>
+					<p>
+				Ajouter un nouveau presnom (WTForms)
+			</p>
+			<form action="" method="POST" novalidate>
+				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
+				{{ form.hidden_tag() }}
+				<div class="form-group">
+					<p>
+						{{ form.nom_genres_wtf.label }}<br>
+						{{ form.nom_genres_wtf(size=32) }}<br>
+						{% for error in form.nom_genres_wtf.errors %}
+							<span style="color: red;">[{{ error }}]</span>
+						{% endfor %}
+					</p>
+					<p>
+				Ajouter un nouveau utilisateur (WTForms)
+			</p>
+			<form action="" method="POST" novalidate>
+				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
+				{{ form.hidden_tag() }}
+				<div class="form-group">
+					<p>
+						{{ form.nom_genres_wtf.label }}<br>
+						{{ form.nom_genres_wtf(size=32) }}<br>
+						{% for error in form.nom_genres_wtf.errors %}
 							<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
