--- a/APP_FILMS_164/templates/genres/genres_afficher.html
+++ b/APP_FILMS_164/templates/genres/genres_afficher.html
@@ -3,10 +3,22 @@
 {% block body %}
 <div class="container">
 	<div class="row">
+
 		<div class="col-md-12">
+			<tbody>
+					<tr>
+						<td>
+							Aucun genre.
+						</td>
+						<td>
+							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
+						</td>
+					</tr>
+				</tbody>
 			<p>
 				Genres
 			</p>
+
             <table class="table table-bordered table-sm">
             {% if data %}
                 <thead>
@@ -69,17 +81,20 @@
 						<td class="align-middle">
 							{{ row.etat }}
 						</td>
+						<!--
 						<td class="text-center" class="align-middle">
 							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
 						</td>
+						-->
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('genre_update_wtf', id_genre_btn_edit_html=row.id_genre) }}" role="button">Edit</a>
+							<a class="btn btn-warning" href="{{ url_for('genre_update_wtf', id_genre_btn_edit_html=id_utilisateur) }}" role="button">Edit</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-danger" href="{{ url_for('genre_delete_wtf', id_genre_btn_delete_html=row.id_genre) }}" role="button">Delete</a>
+							<a class="btn btn-danger" href="{{ url_for('genre_delete_wtf', id_genre_btn_delete_html=row.id_utilisateur) }}" role="button">Delete</a>
 						</td>
 					</tr>
 				</tbody>
+
             {% else %}
 				<tbody>
 					<tr>
