redme et home page est complet et il faut traviller encore sur edit

--- a/APP_FILMS_164/templates/genres/genres_afficher.html
+++ b/APP_FILMS_164/templates/genres/genres_afficher.html
@@ -7,16 +7,16 @@
 		<div class="col-md-12">
 			<tbody>
 					<tr>
-						<td>
-							Aucun genre.
-						</td>
+						<h4>
+							Pour crée un nouveau utilisateur appuis sur ajouter.
+						</h4>
 						<td>
 							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
 						</td>
 					</tr>
 				</tbody>
 			<p>
-				Genres
+
 			</p>
 
             <table class="table table-bordered table-sm">
